--- a/app/index.html
+++ b/app/index.html
@@ -24,12 +24,12 @@
 <div id="menu-holder">
   <div id="menu">
     <div class="menu-item"><a href="#etusivu"><img src="images/speksi-logo.png"></a></div>
-    <div class="menu-item"><span>//</span><a href="#liput">Näytökset ja Liput</a></div>
+    <div class="menu-item"><span>//</span><a href="#liput">Esitykset ja Liput</a></div>
     <div class="menu-item"><span>//</span><a href="#tarina">Tarina</a></div>
-    <div class="menu-item"><span>//</span><a href="#speksi">Mikä Speksi?</a></div>
+    <div class="menu-item"><span>//</span><a href="#speksi">Speksi?</a></div>
     <div class="menu-item right"><a href="https://www.instagram.com/teekkarispeksi/" target="_blank">Instagram</a></div>
     <div class="menu-item right"><a href="https://www.facebook.com/teekkarispeksi/" target="_blank">Facebook</a><span>//</span></div>
-    <div class="menu-item right"><a href="http://speksi.fi/yhdistys/" target="_blank">Yhdistys</a><span>//</span></div>
+    <div class="menu-item right"><a href="http://teekkarispeksi.fi/etusivu/" target="_blank">Yhdistys</a><span>//</span></div>
   </div>
   <div id="menu-mobile">
     <!--<div class="logo-mobile"><a href="#etusivu"><img src="images/speksi-logo.png"></a></div>-->
@@ -40,7 +40,7 @@
         <option value="#tarina">Tarina</option>
         <option value="#speksi">Mikä Speksi?</option>
         <option value="" disabled="disabled">---</option>
-        <option value="http://speksi.fi/yhdistys/">Yhdistys</option>
+        <option value="http://teekkarispeksi.fi/etusivu/">Yhdistys</option>
         <option value="https://www.facebook.com/teekkarispeksi/">Facebook</option>
         <option value="https://www.instagram.com/teekkarispeksi/">Instagram</option>
       </select>
@@ -63,7 +63,7 @@
 
   <div id="liput" class="content-frame">
     <div class="content">
-          <h3>Näytökset</h3>
+          <h3>Esitykset</h3>
           <ul style="padding: 0px">
             <li class="show">4.4. klo 19 Helsinki, Aleksanterin teatteri</li>
             <li class="show">9.4. klo 19 Helsinki, Aleksanterin teatteri</li>
@@ -112,7 +112,7 @@
             <p>Teekkarispeksi ry pyrkii myös edistämään speksin harrastamista Suomessa ja tarjoaa jäsenilleen monenlaisia kursseja ja 
               muita mahdollisuuksia opetella musikaaliteatterin tekemistä. Teekkarispeksin alumnitoiminta on voimissaan Speksialumni ry:n kautta.</p>
 
-            <h3>Mikä speksi?</h3>
+            <h3>Speksi?</h3>
             <p>  Teatteria on tehty maailman sivu, niin ammattilaisvoimin kuin harrastajienkin toimesta. 
               Harva tekijäjoukko kuitenkaan suhtautuu produktioihinsa samanlaisella intohimolla, antautumisella ja rakkaudella kuin ne lukuisat opiskelijat, 
               jotka Suomessa ja Ruotsissa tekevät tietynlaista, improvisaatioon nojaavaa musiikkiteatteria: speksiä.</p>
