--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-  <title>Teekkarispeksi 2016 - Atlantis 1860</title>
+  <title>Teekkarispeksi 2018 - Hurma</title>
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
