--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,8 @@
           <h3>Liput</h3>
           <p>Liput Helsingin näytöksiin 22 / 24 / 29 euroa.</br>
           Kuopion ja Turun näytöksiin 22 euroa.</br>
-          Opiskelija-alennus lipuista 9 euroa.</p>
+          Opiskelija-alennus lipuista 9 euroa.</br>
+          Saatavilla myös kannatuslippuja!</p>
 
           <div class="kauppanappi"><a href="http://liput.teekkarispeksi.fi"> Osta lippuja </a></div>
         </div>
