--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
     <!--<div class="logo-mobile"><a href="#etusivu"><img src="images/speksi-logo.png"></a></div>-->
     <div id="menu-icon"><img src="images/menu-icon.png"></div>
       <select id="menu-select">
-        <option value="" name="" selected="selected">Valikko</option>
+        <option value="#etusivu" name="" selected="selected">Valikko</option>
         <option value="#liput">Näytökset ja Liput</option>
         <option value="#tarina">Tarina</option>
         <option value="#speksi">Mikä Speksi?</option>
