--- a/app/index.html
+++ b/app/index.html
@@ -40,9 +40,9 @@
       <a href="#liput">Esitykset ja Liput</a>
       <a href="#tarina">Tarina</a>
       <a href="#speksi">Speksi?</a>
-      <a href="#http://teekkarispeksi.fi/etusivu/">Yhdistys</a>
-      <a href="#https://www.facebook.com/teekkarispeksi/">Facebook</a>
-      <a href="#https://www.instagram.com/teekkarispeksi/">Instagram</a>
+      <a href="http://teekkarispeksi.fi/etusivu/">Yhdistys</a>
+      <a href="https://www.facebook.com/teekkarispeksi/">Facebook</a>
+      <a href="https://www.instagram.com/teekkarispeksi/">Instagram</a>
     </div>
 </div>
 
