--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,14 @@
             Annankin on tehtävä osansa, jotta illasta tulisi täydellinen. Hänen ajatuksensa ovat kuitenkin aivan muualla, 
             kun yllättävä kirje salaiselta ihailijalta saapuu. Pian Anna tekeekin ratkaisevan virheen, yksi asia johtaa toiseen, 
             eikä lopputulos ole todellakaan sitä mitä kukaan odotti.</p>
+            <div id="partners">
+              <img src="images/sponsors/aw.png"/>
+              <img src="images/sponsors/espoo.png"/>
+              <img src="images/sponsors/su.png"/>
+              <img src="images/sponsors/sw.png"/>
+              <img src="images/sponsors/tek.png"/>
+              <img src="images/sponsors/wer.png"/>
+            </div>
           <div class="text-center">
               <div class="kauppanappi"><a href="http://liput.teekkarispeksi.fi"> Osta lippuja </a></div>
           </div>
