--- a/app/index.html
+++ b/app/index.html
@@ -98,6 +98,7 @@
             <div id="partners">
               <img src="images/sponsors/aw.png"/>
               <img src="images/sponsors/espoo.png"/>
+              <img src="images/sponsors/np.png"/>
               <img src="images/sponsors/su.png"/>
               <img src="images/sponsors/sw.png"/>
               <img src="images/sponsors/tek.png"/>
