--- a/app/index.html
+++ b/app/index.html
@@ -111,6 +111,7 @@
             eikä lopputulos ole todellakaan sitä mitä kukaan odotti.</p>
             <div id="partners">
               <img src="images/sponsors/aw.png"/>
+              <img src="images/sponsors/bwf.png"/>
               <img src="images/sponsors/espoo.png"/>
               <img src="images/sponsors/np.png"/>
               <img src="images/sponsors/su.png"/>
