--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
     <div class="menu-item"><a href="#etusivu"><img src="images/speksi-logo.png"></a></div>
     <div class="menu-item"><span>//</span><a href="#liput">Esitykset ja Liput</a></div>
     <div class="menu-item"><span>//</span><a href="#tarina">Tarina</a></div>
+    <div class="menu-item"><span>//</span><a href="#trailer">Traileri</a></div>
     <div class="menu-item"><span>//</span><a href="#speksi">Speksi?</a></div>
     <div class="menu-item right"><a href="https://www.instagram.com/teekkarispeksi/" target="_blank">Instagram</a></div>
     <div class="menu-item right"><a href="https://www.facebook.com/teekkarispeksi/" target="_blank">Facebook</a><span>//</span></div>
@@ -53,6 +54,7 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="#liput">Esitykset ja Liput</a>
       <a href="#tarina">Tarina</a>
+      <a href="#trailer">Traileri</a>
       <a href="#speksi">Speksi?</a>
       <a href="http://teekkarispeksi.fi/etusivu/">Yhdistys</a>
       <a href="https://www.facebook.com/teekkarispeksi/">Facebook</a>
@@ -122,6 +124,13 @@
           <div class="text-center">
               <div class="kauppanappi"><a href="http://liput.teekkarispeksi.fi"> Osta lippuja </a></div>
           </div>
+      </div>
+    </div>
+
+    <div id="trailer" class="content-frame">
+      <div class="content">
+        <h3>Traileri</h3>
+        <iframe style="width: 70vw; height: 34vw; max-width: 1280px; max-height: 720px;" src="https://www.youtube.com/embed/uRv1rN3Ia0Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       </div>
     </div>
 
