--- a/app/index.html
+++ b/app/index.html
@@ -116,6 +116,7 @@
               <img src="images/sponsors/bwf.png"/>
               <img src="images/sponsors/espoo.png"/>
               <img src="images/sponsors/np.png"/>
+              <img src="images/sponsors/smart.png"/>
               <img src="images/sponsors/su.png"/>
               <img src="images/sponsors/sw.png"/>
               <img src="images/sponsors/tek.png"/>
